infra/overlays/local/patch-ingress.yaml
# Sin TLS y host local en lugar del dominio institucional
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: puj-platform
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/limit-rpm: "100"
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/proxy-body-size: "55m"
spec:
  rules:
    - host: platform.local
      http:
        paths:
          - path: /course-files/
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui
                port:
                  number: 8080
